# Open-A.G.I

./: .dockerignore  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARQUITECTURA_IA_DISTRIBUIDA.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_CHANGES_SUMMARY.md  CONTENIDO_ARCHIVOS_METAMASK.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.fixed  Dockerfile.jupyter  ENV_SETUP.md  GUIA_IMPLEMENTACION_METAMASK.md  LICENSE  Makefile  PIPELINE_FIXES_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESO_DESARROLLO.md  PULL_REQUEST_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUANTUM_CURRENCY_README.md  README.md  README_DEPLOYMENT.md  REST_API.md  ROADMAP.md  ROADMAP_RESUMEN_EJECUTIVO.md  SECURITY.md  TEST_FIXES_SUMMARY.md  TOKEN_COHERENCE_INTEGRATION_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  advanced_analytics_forecasting.py  advanced_computer_vision.py  advanced_model_optimization.py  advanced_optimization_demo.py  (+146 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: benchmark_results.json  benchmark_suite.py  consensus_benchmarks.py  performance_suite.py  results.json  security_benchmarks.py
certs/: server.crt  server.key
client/: encryption_engine.py  network_client.py
config/: .gitkeep  app_config.json  config.example.yml  production_config.json  production_config_v3.json  prometheus.yml  torrc  torrc_optimized
dashboard/: index.html  package-lock.json  package.json
data/: aegis_dashboard.db
docker/: Dockerfile.ci  Dockerfile.secure-node  Dockerfile.temp  Dockerfile.tor  README.secure-node.md  client.Dockerfile  docker-compose.yml  entrypoint_secure_node.sh  requirements-docker.txt  torrc.secure-node  validator.Dockerfile
docs/: .gitkeep  ADVANCED_API.md  ADVANCED_FEATURES.md  ADVANCED_SECURITY.md  AEGIS_FRAMEWORK_RESUMEN_FINAL.md  ANALISIS_PROFUNDO_PROYECTO.md  API_REFERENCE.md  API_USAGE.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARCHON_CONFIGURACION_COMPLETA.md  ARQUITECTURA_IA_DISTRIBUIDA.md  CHANGELOG.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CORRECCIONES_SEGURIDAD_CI_2026-01-21.md  DEPENDENCIES_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEVELOPMENT_PROGRESS.md  DOMAINS_INTEGRATION.md  ENTERPRISE_DEPLOYMENT.md  ENTRY_POINTS_UPDATE.md  ESTADO_ACTUALIZACION_ARCHON.md  ESTUDIO_REPOSITORIO_2026-01-21.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  GRAFANA_AUTH.md  IMPLEMENTATION_STATUS.md  INDEX.md  PR12_MIGRATION_GUIDE.md  PRIORITY_TASKS_REPORT.md  PROJECT_FINAL_STATUS.md  PROJECT_STRUCTURE.md  QUANTUM_CURRENCY_API.md  QUANTUM_CURRENCY_DEVELOPER.md  QUANTUM_CURRENCY_SECURITY.md  QUICK_WINS.md  README.md  RELEASE_NOTES_v2.2.0.md  (+15 more)
examples/: 01_hello_world.py  02_crypto_operations.py  03_merkle_tree.py  04_p2p_network.py  05_monitoring.py  06_complete_integration.py  07_federated_learning_demo.py  08_advanced_features_demo.py  09_consensus_stress_test.py  10_comprehensive_demo.py
keys/: encryption.key  jwt.key  master.key
node/: storage_service.py  verification_orchestrator.py
openagi/: bug_bounty.py  community_dashboard.py  compliance_framework.py  consensus_protocol.py  formal_verification.py  governance.py  hardware_security.py  harmonic_validation.py  harmonic_wallet.py  homomorphic_encryption.py  hybrid_rng_research.py  integration_test.py  onchain_governance.py  quantum_coherence_ai.py  quantum_rng.py  quantum_signal_processing.py  rest_api.py  token_economy_simulation.py  token_rules.py  validator_console.py  validator_staking.py
quantum-currency/: # test_quantum_tokenomics.py  .dockerignore  .gitignore  6-7.ini  AFIP_INTEGRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  COSMIC_ASCENSION_VERIFICATION_REPORT.md  COSMIC_ASCENSION_VERIFICATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.agi-coordinator  Dockerfile.cal-engine  Dockerfile.emanation  Dockerfile.governance  Dockerfile.hmn-node  Dockerfile.minimal  Dockerfile.mining-agent  Dockerfile.optimized  Dockerfile.production  Dockerfile.verification  Dockerfile.zkp-ledger  EMANATION_DEPLOYMENT_README.md  EMANATION_PHASE_README.md  FIELD_GRAVITATION_INTEGRATION_REPORT.md  FINAL_PHASE_6_7_IMPLEMENTATION_REPORT.md  FOUR_KEY_AREAS_IMPLEMENTATION_SUMMARY.md  HMN_ENHANCEMENT_CHECKLIST.md  HMN_ENHANCEMENT_VERIFICATION_REPORT.md  HMN_FULL_ASSESSMENT_REPORT.md  HMN_PRODUCTION_DEPLOYMENT_VERIFICATION.md  HMN_PRODUCTION_ROLLOUT_CHECKLIST.md  HSMF_Protocol_Amendment_e0cd535f5f7f8ea1.md  IACE_V2_README.md  MASS_EMERGENCE_VERIFICATION_README.md  NEXT_STEPS_IMPLEMENTATION_PLAN.md  PHASE_6_7_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  Phase 6.md  QUANTUM_CURRENCY_FOUR_KEY_AREAS_IMPLEMENTATION.md  (+103 more)
reports/: .gitkeep  final_optimization_report_1760314921.json  integration_report.json  pip_audit_postfix.txt  security_audit_postfix.txt  system_validation_1760315894.json
scripts/: .gitkeep  auto-deploy-linux.sh  auto-deploy-windows.ps1  backup-config.ps1  backup-config.sh  backup.sh  build_docker.sh  check_dependencies.sh  client_node.py  create_archon_summary.sh  demo.py  demo_emulation.py  demo_emulation.sh  demo_mint_flex.py  deploy-production.ps1  deploy-production.sh  deploy.ps1  deploy.sh  deploy_advanced.sh  edge_coherence_sensor.py  final_tor_p2p_optimization.py  fix_test_imports.sh  health-check.ps1  health-check.sh  health_check.ps1  health_check.sh  init-db.sh  install-dependencies.ps1  install-dependencies.sh  iot_sensor_ingestion.py  maintenance.ps1  maintenance.sh  monitor-services.ps1  monitor-services.sh  monitor.ps1  monitor.sh  priority_analysis.py  quick_start_stop_test.py  quickstart.sh  rollback.sh  (+37 more)
security_audits/: security_audit_20251026_172323.json
src/: aegis_storage.py  aegis_storage_audit.py  aegis_storage_dashboard_server.py  pbft_integration.py
state_storage/: consensus_state_demo_node_1_1761504883.json  consensus_state_quick_test_node_1761505908.json
templates/: dashboard.html  integrated_dashboard.html
test_results/: aegis_test_report_20251012_162710.html  aegis_test_report_20251012_162710.json  aegis_test_report_20251012_164359.html  aegis_test_report_20251012_164359.json  (+2 more)
(+566 files in other folders)
