[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-framework"
version = "1.0.0"
description = "Advanced Encrypted Governance and Intelligence System - A quantum-resistant distributed framework"
readme = "README.md"
authors = [
    {name = "AEGIS Development Team", email = "dev@aegis-project.org"}
]
maintainers = [
    {name = "AEGIS Security Team", email = "security@aegis-project.org"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
]
keywords = [
    "blockchain", "cryptography", "p2p", "consensus", "distributed-systems",
    "security", "encryption", "decentralized", "network", "storage",
    "monitoring", "dashboard", "backup", "testing", "framework",
    "quantum-resistant", "post-quantum", "hybrid-consensus", "paxos",
    "raft", "pbft", "tor", "onion-routing", "privacy", "anonymity"
]

dependencies = []

[project.optional-dependencies]
dev = []
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
    "myst-parser>=1.0.0",
    "sphinx-copybutton>=0.5.0",
]
monitoring = [
    "prometheus-client>=0.16.0",
    "grafana-api>=1.0.3",
    "elasticsearch>=8.0.0",
    "loguru>=0.7.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "semgrep>=1.0.0",
    "cryptography>=40.0.0",
]
performance = [
    "uvloop>=0.17.0",
    "orjson>=3.8.0",
    "cython>=0.29.0",
    "numba>=0.57.0",
]
cloud = [
    "boto3>=1.26.0",
    "google-cloud-storage>=2.7.0",
    "azure-storage-blob>=12.14.0",
    "kubernetes>=26.1.0",
]

[project.urls]
Homepage = "https://github.com/AEGIS-Project/AEGIS"
Documentation = "https://aegis-project.readthedocs.io/"
Repository = "https://github.com/AEGIS-Project/AEGIS"
"Bug Tracker" = "https://github.com/AEGIS-Project/AEGIS/issues"
Changelog = "https://github.com/AEGIS-Project/AEGIS/blob/main/docs/CHANGELOG.md"
"Security Policy" = "https://github.com/AEGIS-Project/AEGIS/security/policy"
Discussions = "https://github.com/AEGIS-Project/AEGIS/discussions"
Wiki = "https://github.com/AEGIS-Project/AEGIS/wiki"

[project.scripts]
# Main CLI entry points
aegis = "aegis.cli.main:main"
aegis-node = "aegis.cli.main:node_main"
aegis-test = "aegis.cli.test_runner:main"
# Component-specific entry points
aegis-monitor = "aegis.monitoring.monitoring_dashboard:main"
aegis-backup = "aegis.storage.backup_system:main"
aegis-crypto = "aegis.security.crypto_framework:main"
aegis-p2p = "aegis.networking.p2p_network:main"
aegis-consensus = "aegis.blockchain.consensus_algorithm:main"
aegis-storage = "aegis.storage.knowledge_base:main"
aegis-web = "aegis.api.web_dashboard:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aegis*"]
namespaces = false

[tool.setuptools.package-data]
aegis = [
    "config/*.yml",
    "config/*.yaml",
    "config/*.json",
    "templates/*.html",
    "templates/*.css",
    "templates/*.js",
    "static/*",
    "schemas/*.json",
    "certs/*.pem",
    "docs/*.md",
    "tests/fixtures/*.json",
    "tests/fixtures/*.yml",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --disable-warnings --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]
