[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-framework"
version = "2.0.0"
description = "AEGIS Framework - Sistema de IA Distribuida y Seguridad Avanzada"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jose Gómez", email = "kasemaster@aegis-framework.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "pyotp>=2.9.0",
    "stem>=1.8.2",
    "pysocks>=1.7.1",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "pandas>=2.2.2",
    "flask>=3.0.0",
    "zeroconf>=0.132.2",
    "Flask-SocketIO>=5.3.6",
    "netifaces>=0.11.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
gpu = [
    "torch[cu118]>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
aegis = "main:cli"

[project.urls]
Homepage = "https://github.com/KaseMaster/Open-A.G.I"
Repository = "https://github.com/KaseMaster/Open-A.G.I"
Issues = "https://github.com/KaseMaster/Open-A.G.I/issues"
Documentation = "https://github.com/KaseMaster/Open-A.G.I/docs"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.conf", "*.torrc"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "stem.*",
    "pysocks.*",
    "asyncio_mqtt.*",
    "aiohttp_socks.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol.*:",
    "@abstractmethod",
]