[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-open-agi"
version = "2.1.0"
description = "AEGIS Open AGI: IA distribuida y colaborativa (P2P + TOR + PBFT + Crypto)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "José María Gómez García", email = "kasemaster@protonmail.com"}
]
keywords = ["ai", "distributed", "tor", "p2p", "security", "aegis", "open-agi"]
dependencies = [
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "pyotp>=2.9.0",
    "stem>=1.8.2",
    "pysocks>=1.7.1",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "leveldb>=0.201; sys_platform != 'win32'",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "pandas>=2.2.2",
    "flask>=3.0.0",
    "zeroconf>=0.132.2",
    "Flask-SocketIO>=5.3.6",
    "netifaces>=0.11.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "detect-secrets>=1.4.0",
]

[project.scripts]
aegis-node = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aegis_core"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration_tests.py",
]

[tool.ruff]
select = ["E", "F", "B", "S"]
ignore = ["E501"]
line-length = 88
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
